public class Pantalla {
    protected Resolucion resolucion;

    public Pantalla(Resolucion resolucion) {
        this.resolucion=resolucion;
    }


    
}
